# nanoharness

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO-SECURITY.md  eu.md  nanoharness.md  nanoharness.sh  ollama-flash-attention-and-kv-cache.sh  ollama-flash-attention.sh  ollama-flash-with-brew.sh  pyproject.toml
.nanoharness/: history
docs/: llm-tool-calling-flow.html  playwright-explainer.html  releasing-macos.md  safety.md
nanoharness/: __init__.py  __main__.py  _version.py  agent.py  buildmeta.py  commands.py  completion.py  config.py  desktop.py  history.py  logging.py  ollama.py  startup.py  tools.py  tui.py  web.py
packaging/: NanoHarness-app.spec  cli_launcher.py  gui_launcher.py  nanoh.spec
scripts/: build-macos-and-publish.sh  build-macos.sh  notarize-macos.sh  publish-github-release.sh  publish-homebrew-tap.sh  release-macos.sh  render_homebrew_tap.py  render_macos_icon.py  version_info.py
tests/: conftest.py  test_agent_pure.py  test_buildmeta.py  test_commands.py  test_completion.py  test_config.py  test_desktop.py  test_history.py  test_homebrew_tap.py  test_ollama.py  test_startup.py  test_tools.py  test_tui.py  test_web.py  test_web_e2e.py  test_web_pw.py
